--- a/.github/stacks/stack.yml
+++ b/.github/stacks/stack.yml
@@ -1,1 +1,77 @@
-ok
+name: koushdey-stack-11
+description: This is a stack for testing in bug bash
+branding:
+  icon: 'activity'
+  color: 'black'
+
+#-------------------------------------------------------------
+# All values needed to be provided/verified by the user should be defined as inputs.
+# Values can be provided using a values file (yaml/json/.env format) or from the UX.
+# Default values are defined by stack authors using **default: <Value>**
+# All inputs defined here are optional unless they are marked **required: true**
+# All inputs will be of String type by default unless specified as **type:boolean**
+# All inputs will be considered as non-secrets unless specified as **is_secret:true**
+# All inputs will be available for scripts/workflows run as part of stack init
+# Any input that is not explicitly configured as Repo/Environment secret will NOT be available in the new stack
+inputs:
+
+  - name: REPO_SECRET
+    description: Repo Secret
+    is-secret: true
+    required: true
+ 
+  - name: ENV_SECRET_1
+    description: Env Secret 1
+    is-secret: true
+    required: true
+  
+  - name: ENV_SECRET_2
+    description: Env Secret 2
+    is-secret: true
+    required: true
+
+  - name: Enable_Vulnerability_Alerts
+    description: Enable Vulnerability Alerts
+    type: boolean
+
+  - name: init_script_echo
+    default: "hello world"
+    description: this would be consumed by init script
+    required: false
+
+#-------------------------------------------------------------
+configs:
+  # Meta data for creating the new repository
+ repo-metadata:
+    parameters:
+      description: This is a test stack for testing.
+      secrets: 
+      - name: REPO_SECRET_1
+        value: ${{inputs.REPO_SECRET}}
+      topics:
+      - node
+      - sql
+  
+  # Environments & Secrets
+ environments: 
+    - name: production
+      parameters: 
+        secrets:
+          - name: ENV_SECRET_1
+            value: ${{ inputs.ENV_SECRET_1 }}
+          - name: ENV_SECRET_2
+            value: ${{ inputs.ENV_SECRET_2 }}
+
+  # Security and configuration settings to be enabled/disabled
+ security:
+    parameters: 
+      vulnerability-alerts: ${{inputs.Enable_Vulnerability_Alerts}}
+      automated-security-fixes: true
+
+
+#-------------------------------------------------------------
+# Initialization workflow to run
+# This workflow file will NOT be part of the stack (new repo created). 
+# workflow could use the stack inputs using the notation : ${{ github.event.inputs.name }}
+init:
+ uses: ".github/workflows/setup.yml"
