--- a/.github/stacks/stack.yml
+++ b/.github/stacks/stack.yml
@@ -58,7 +58,7 @@ configs:
       parameters: 
         secrets:
           - name: ENV_SECRET_1
-            value: ${{ inputs.ENV_SECRET_12 }}
+            value: ${{ inputs.ENV_SECRET_1 }}
           - name: ENV_SECRET_2
             value: ${{ inputs.ENV_SECRET_2 }}
 
@@ -66,7 +66,7 @@ configs:
  security:
     parameters: 
       vulnerability-alerts: ${{inputs.Enable_Vulnerability_Alerts}}
-      automated-security-fixes: true
+      automated-security-fixes: ${{ inputs.ENV_SECRET_1 }}
 
 
 #-------------------------------------------------------------
