--- a/.github/stacks/stack.yml
+++ b/.github/stacks/stack.yml
@@ -1,78 +1,56 @@
-name: koushdey-stack-11
-description: This is a stack for testing in bug bash
-branding:
-  icon: 'activity'
-  color: 'black'
+version: 0.1.0                                            # stack schema version 0.1.0 (latest)
 
-#-------------------------------------------------------------
-# All values needed to be provided/verified by the user should be defined as inputs.
-# Values can be provided using a values file (yaml/json/.env format) or from the UX.
-# Default values are defined by stack authors using **default: <Value>**
-# All inputs defined here are optional unless they are marked **required: true**
-# All inputs will be of String type by default unless specified as **type:boolean**
-# All inputs will be considered as non-secrets unless specified as **is_secret:true**
-# All inputs will be available for scripts/workflows run as part of stack init
-# Any input that is not explicitly configured as Repo/Environment secret will NOT be available in the new stack
-inputs:
+name: Deploy nextJs to GitHub pages - 3           # stack name 
+description: Deploy Next JS site to Github Pages       # stack description
 
-  - name: REPO_SECRET
-    description: Repo Secret
-    is-secret: true
-    required: true
- 
-  - name: ENV_SECRET_1
-    description: Env Secret 1
-    is-secret: true
-    required: true
-  
-  - name: ENV_SECRET_2
-    description: Env Secret 2
+branding:                                              # stack branding 
+ icon: 'package'
+ color: 'black'
+
+inputs:                                                # stack inputs 
+    
+  - name: NODE_VERSION                                 # stack input name
+    default: v12.22.4                              # stack input default value provided
+    description: NODE_VERSION for nodejs stack         # stack input description
+    validvalues:                                       # stack input valid values that can be selected
+    - v12.22.4
+    - v14.17.4
+    
+  - name: GITHUB_PAT
+    description: GitHub PAT with repo and workflow permissions
     is-secret: true
     required: true
 
-  - name: Enable_Vulnerability_Alerts
-    description: Enable Vulnerability Alerts
-    type: boolean
-    validvalues: 
-      - true
+configs:                                               # stack config applied to new repository
+  repo-metadata:
+     parameters:
+       description: 'Setup your Nextjs site in Github Pages'
+       secrets: 
+         - name: GH_PAT
+           value: ${{inputs.GITHUB_PAT}}
+       topics:                                            # repository tags for new repository
+       - nextjs
+       - github-pages
 
-  - name: init_script_echo
-    default: "hello world"
-    description: this would be consumed by init script
-    required: false
+  branches:                                            # branching configs for new repository
+    - name: main
+      parameters:
+        dismiss-stale-reviews: true                      # default: false
+        required-approving-review-count: 1
+        require-code-owner-reviews: true
 
-#-------------------------------------------------------------
-configs:
-  # Meta data for creating the new repository
- repo-metadata:
-    parameters:
-      description: This is a test stack for testing.
-      secrets: 
-      - name: REPO_SECRET_1
-        value: ${{inputs.REPO_SECRET}}
-      topics:
-      - node
-      - sql
-  
-  # Environments & Secrets
- environments: 
-    - name: production
+  environments:                                        
+    - name: development
       parameters: 
-        secrets:
-          - name: ENV_SECRET_1
-            value: ${{ inputs.ENV_SECRET_1 }}
-          - name: ENV_SECRET_2
-            value: ${{ inputs.ENV_SECRET_2 }}
+        protected-branches: false
+        custom-branch-policies:
+          - main
+          - releases/*
 
-  # Security and configuration settings to be enabled/disabled
- security:
-    parameters: 
-      vulnerability-alerts: ${{inputs.Enable_Vulnerability_Alerts}}
-      automated-security-fixes: true
+github-apps:
+- slug: imgbot
+- slug: prisma-cloud
+- slug: sider
 
-#-------------------------------------------------------------
-# Initialization workflow to run
-# This workflow file will NOT be part of the stack (new repo created). 
-# workflow could use the stack inputs using the notation : ${{ github.event.inputs.name }}
 init:
- uses: ".github/workflows/setup.yml"
+ uses: ".github/workflows/stack-init.yaml"
